--- a/locale/cs/LC_MESSAGES/messages.po
+++ b/locale/cs/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Czech (cs)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-01 15:34+0000\n"
-"PO-Revision-Date: 2015-04-02 14:03+0000\n"
+"PO-Revision-Date: 2015-07-02 23:08+0000\n"
 "Last-Translator: Michal <michal.stanke@mikk.cz>\n"
 "Language-Team: Czech Mozilla Team <info@mozilla.cz>\n"
 "Language: cs\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1427983417.0\n"
+"X-POOTLE-MTIME: 1435878515.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18 public/js/views/payment-failed.js:19
 msgid "Payment cancelled."
@@ -30,7 +30,7 @@ msgstr "PIN může obsahovat pouze čísla."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
-msgstr "Jste přihlášen(a) jako jiný uživatel. Musíte platbu zahájit znovu."
+msgstr "Jste přihlášeno jako jiný uživatel, musíte platbu zahájit znovu."
 
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16 templates/throbber.html:7
 msgid "Loading"
@@ -51,7 +51,7 @@ msgstr "Platba byla dokončena"
 
 #: public/js/lib/auth.js:22 public/js/lib/auth.js:20 public/js/views/page.js:41
 msgid "Oops"
-msgstr "Oops"
+msgstr "Jejda"
 
 #: public/js/lib/auth.js:65 public/js/lib/auth.js:84 public/js/lib/auth.js:155 public/js/lib/auth.js:86 public/js/lib/auth.js:157
 msgid "This is taking longer than expected. Try again?"
@@ -121,11 +121,13 @@ msgstr "Obnova PINu"
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6 templates/pin-form.html:29 templates/pin-form.html:30
 msgid "Forgot your PIN?"
-msgstr "Zapomněl(a) jste svůj PIN?"
+msgstr "Zapomněli jste svůj PIN?"
 
 #: public/js/views/locked.js:24 public/js/views/locked.js:22
 msgid "You entered the wrong PIN too many times. Your account is locked. Please try your purchase again in 5 minutes."
-msgstr "Zadal(a) jste opakovaně špatný kód PIN. Váš účet je nyní zablokován. Zkuste znovu svůj nákup za 5 minut."
+msgstr ""
+"Zadali jste opakovaně špatný kód PIN. Váš účet je nyní zablokován. Zkuste "
+"znovu svůj nákup za 5 minut."
 
 #: templates/was-locked.html:6
 msgid "Your PIN was locked"
@@ -133,11 +135,15 @@ msgstr "PIN byl uzamčen"
 
 #: templates/was-locked.html:7
 msgid "Your PIN was locked because you entered it incorrectly too many times. You can continue and try entering your PIN again or reset your PIN."
-msgstr "PIN byl zablokován, protože jste jej vložil(a) opakovaně chybně. Můžete pokračovat a zkusit jej zadat znovu či PIN obnovit."
+msgstr ""
+"PIN byl zablokován, protože jste jej vložili opakovaně chybně. Můžete "
+"pokračovat a zkusit jej zadat znovu či PIN obnovit."
 
 #: templates/reset-start.html:7 templates/reset-start.html:10
 msgid "Are you sure you want to reset your PIN? You must sign in to Persona to reset your PIN."
-msgstr "Jste si jist(a), že chcete obnovit svůj PIN? Pro obnovu svého PINu se musíte přihlásit pomocí Persona."
+msgstr ""
+"Jste si jisti, že chcete obnovit svůj PIN? Pro obnovu svého PINu se musíte "
+"přihlásit pomocí Persona."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6 webpay/provider/templates/provider/wait-to-finish.html:12
 msgid "Verifying payment"
@@ -222,7 +228,7 @@ msgstr "Odeslaná data pro PIN jsou neplatná."
 
 #: public/js/error-codes.js:19 public/js/error-codes.js:22 public/js/error-codes.js:23
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr "Při vytváření vašeho PIN nebyl nalezen žádný platný uživatel."
+msgstr "Při vytváření vašeho PIN nebyl nalezen žádný platný uživatel"
 
 #: public/js/error-codes.js:20 public/js/error-codes.js:23 public/js/error-codes.js:24
 msgid "Permission denied attempting to create your PIN."
@@ -238,7 +244,7 @@ msgstr "Při kontrole vašeho PIN nastala neočekávaná chyba."
 
 #: public/js/error-codes.js:23 public/js/error-codes.js:26 public/js/error-codes.js:27
 msgid "No valid user found whilst checking your PIN"
-msgstr "Při kontrole vašeho PIN nebyl nalezen žádný platný uživatel."
+msgstr "Při kontrole vašeho PIN nebyl nalezen žádný platný uživatel"
 
 #: public/js/error-codes.js:24 public/js/error-codes.js:27 public/js/error-codes.js:28
 msgid "Permission denied attempting to check your PIN"
