--- a/locale/sr_Latn/LC_MESSAGES/messages.po
+++ b/locale/sr_Latn/LC_MESSAGES/messages.po
@@ -1,8 +1,9 @@
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-29 20:05+0000\n"
+"POT-Creation-Date: 2015-08-12 15:28+0000\n"
 "PO-Revision-Date: 2015-04-17 11:52+0000\n"
 "Last-Translator: Vanja <tumbas93@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.5.0\n"
+"X-Generator: Pontoon\n"
 "X-POOTLE-MTIME: 1429271567.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
