--- a/locale/pa_IN/LC_MESSAGES/messages.po
+++ b/locale/pa_IN/LC_MESSAGES/messages.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2015-09-16 12:07+0000\n"
 "Last-Translator: Anonymous Pootle User\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: pa\n"
+"Language: pa_IN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
